Centered github widget

--- a/index.html
+++ b/index.html
@@ -5,5 +5,8 @@ layout: default
 <div class="home">
 <img src="/_assets/20160904_133849_HDR.jpg" alt="Mountain" />
 </div>
+
+<center>
 <div class="github-widget" data-username="wavefunction91"></div>
+</center>
 <script src="https://unpkg.com/github-card@1.2.1/dist/widget.js"></script>
