Small change to pubs, new github widget on main page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,16 @@ layout: default
 <img src="/_assets/20160904_133849_HDR.jpg" alt="Mountain" />
 </div>
 
+<!-- 
 <center>
 <div class="github-widget" data-username="wavefunction91"></div>
 </center>
 <script src="https://unpkg.com/github-card@1.2.1/dist/widget.js"></script>
+ -->
+
+<br><br><br>
+<center>
+<div class="github-card" data-github="wavefunction91" data-width="700" data-height="317" data-theme="medium"></div>
+<div class="github-card" data-github="liresearchgroup/chronusq_public" data-width="700" data-height="155" data-theme="default"></div>
+</center>
+<script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
