Changed main picture

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@ layout: default
 ---
 
 <div class="home">
+<!--
 <img src="/_assets/20160904_133849_HDR.jpg" alt="Mountain" />
+-->
+<img src="/_assets/20170506_124143.jpg" alt="PugetSound" />
 </div>
 
 <!-- 
