--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@ layout: default
 <img src="/_assets/20170506_124143.jpg" alt="PugetSound" />
 </div>
 
+
+<iframe src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showNav=0&amp;showDate=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;mode=AGENDA&amp;height=300&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=a3gelj3m76p6m0k1p3aktdddf8%40group.calendar.google.com&amp;color=%23875509&amp;ctz=America%2FLos_Angeles" style="border-width:0" width="800" height="300" frameborder="0" scrolling="no"></iframe>
+
 <!-- 
 <center>
 <div class="github-widget" data-username="wavefunction91"></div>
